Fixed minor alignment issue

--- a/res/css/_content.sass
+++ b/res/css/_content.sass
@@ -317,3 +317,6 @@
               @media(max-width: 800px)
                 vertical-align: top
                 display: inline
+
+                span
+                  vertical-align: top
